--- a/two-player.html
+++ b/two-player.html
@@ -13,6 +13,6 @@
         <div id="player"></div>
         <button onclick="reset()">Restart</button>
     </div>
-    <script src="game-singleplayer.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
