added max depth input

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="flex-col">
         <div id="game"></div>
         <div id="player"></div>
+        <div>
+            Max serach depth
+            <input id="max-depth" type="number" min="3" max="100" value="3"/>
+        </div>
         <button onclick="reset()">Restart</button>
     </div>
     <script src="game-singleplayer.js"></script>
